--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
 	<![endif]-->
 </head>
-<body>
+<body style="margin:0">
 	<div id="map" style="position: fixed; width: 100%; height: 100%;"></div>
 	<script src="brochure-bundle.js"></script>
 	<script type="text/javascript">
